refactor(catalog-service): migrate to Java 21 and Spring Boot 3.3.5
- Bump java.version to 21 in pom.xml
- Upgrade Spring Boot parent to 3.3.5 (Java 21 LTS support)
- Replace model classes (Product, Category, Store, HomeData) with Java 21 records
- Modernize ColorDistanceService: internal Rgb record, stream-based minDistanceToAny
- Modernize CatalogService: var inference, switch expression, .toList()
- Update unit tests to match new ColorDistanceService API (7 tests, all passing)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>