@@ -1,14 +1,12 @@
 package com.tractorstore.service;
 
 import com.tractorstore.data.CatalogData;
-import com.tractorstore.model.Category;
 import com.tractorstore.model.HomeData;
 import com.tractorstore.model.Product;
 import com.tractorstore.model.Store;
 import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -26,9 +24,9 @@ public class CatalogService {
     }
 
     public HomeData getHome() {
-        List<Product> allProducts = catalogData.getAllProducts();
-        List<Category> categories = catalogData.getAllCategories();
-        List<Product> featured = allProducts.subList(0, Math.min(4, allProducts.size()));
+        var products   = catalogData.getAllProducts();
+        var categories = catalogData.getAllCategories();
+        var featured   = products.subList(0, Math.min(4, products.size()));
         return new HomeData(
             "Bienvenido a The Tractor Store",
             "Encuentra el tractor perfecto para tu campo",
@@ -38,13 +36,13 @@ public class CatalogService {
     }
 
     public List<Product> getProductsByFilter(String filter) {
-        List<Product> all = catalogData.getAllProducts();
-        if ("all".equalsIgnoreCase(filter)) {
-            return all;
-        }
-        return all.stream()
-            .filter(p -> p.getCategory().equalsIgnoreCase(filter))
-            .collect(Collectors.toList());
+        var all = catalogData.getAllProducts();
+        return switch (filter.toLowerCase()) {
+            case "all" -> all;
+            default    -> all.stream()
+                             .filter(p -> p.category().equalsIgnoreCase(filter))
+                             .toList();
+        };
     }
 
     public List<Store> getStores() {
@@ -53,44 +51,40 @@ public class CatalogService {
 
     /**
      * Returns up to {@value #MAX_RECOMMENDATIONS} products whose colors are closest
-     * (Euclidean distance in RGB space) to the colors of the requested SKUs.
+     * (Euclidean RGB distance) to the colors of the requested SKUs.
      *
-     * <p>Algorithm (pure Java):
-     * <ol>
-     *   <li>Resolve the hex colors of all requested SKUs.</li>
-     *   <li>For every other product compute its minimum RGB distance to any reference color.</li>
-     *   <li>Sort candidates ascending by that distance.</li>
-     *   <li>Return the top {@value #MAX_RECOMMENDATIONS} results.</li>
-     * </ol>
+     * Algorithm (pure Java):
+     *  1. Resolve the hex color of each requested SKU.
+     *  2. For every other product, compute its minimum RGB distance to any reference color.
+     *  3. Sort ascending by that distance and return the top results.
      *
-     * @param skusCsv comma-separated list of SKU codes
-     * @return ordered list of recommended products (closest color first)
+     * @param skusCsv comma-separated SKU codes, e.g. "TRK-001,AUT-002"
      */
     public List<Product> getRecommendations(String skusCsv) {
         Set<String> requestedSkus = Arrays.stream(skusCsv.split(","))
             .map(String::trim)
             .filter(s -> !s.isEmpty())
             .map(String::toUpperCase)
-            .collect(Collectors.toSet());
+            .collect(Collectors.toUnmodifiableSet());
 
-        Map<String, Product> skuToProduct = catalogData.getAllProducts().stream()
-            .collect(Collectors.toMap(p -> p.getSku().toUpperCase(), p -> p));
+        Map<String, Product> skuIndex = catalogData.getAllProducts().stream()
+            .collect(Collectors.toMap(p -> p.sku().toUpperCase(), p -> p));
 
         List<String> referenceColors = requestedSkus.stream()
-            .filter(skuToProduct::containsKey)
-            .map(sku -> skuToProduct.get(sku).getColor())
-            .collect(Collectors.toList());
+            .filter(skuIndex::containsKey)
+            .map(sku -> skuIndex.get(sku).color())
+            .toList();
 
         if (referenceColors.isEmpty()) {
             return List.of();
         }
 
         return catalogData.getAllProducts().stream()
-            .filter(p -> !requestedSkus.contains(p.getSku().toUpperCase()))
-            .sorted(Comparator.comparingDouble(
-                p -> ColorDistanceService.minDistanceToAny(p.getColor(), referenceColors)
+            .filter(p -> !requestedSkus.contains(p.sku().toUpperCase()))
+            .sorted(java.util.Comparator.comparingDouble(
+                p -> ColorDistanceService.minDistanceToAny(p.color(), referenceColors)
             ))
             .limit(MAX_RECOMMENDATIONS)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
